--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,20 +8,19 @@ version: 1.0.0+1
 environment:
   sdk: '>=2.18.6 <3.0.0'
 
-
 dependencies:
+  cloud_firestore: ^4.3.1
+  cupertino_icons: ^1.0.2
+  firebase_auth: ^4.2.5
+  firebase_core: ^2.4.1
+  firebase_storage: ^11.0.10
   flutter:
     sdk: flutter
 
-
-  cupertino_icons: ^1.0.2
-
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^2.0.0
-
 
 flutter:
 
