--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   firebase_storage: ^11.0.10
   flutter:
     sdk: flutter
+  country_picker: ^2.0.19
+
 
 dev_dependencies:
   flutter_lints: ^2.0.0
