Adding 'flutter_river'  Library ,  Adding GoogleService-Info.plist for Firebase iOS App & Creating Auth Controller

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>177395710789-1stducq15cj7o58p3h9c4cm4r1h3fcf5.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.177395710789-1stducq15cj7o58p3h9c4cm4r1h3fcf5</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>177395710789-mnvo9qaaj149oeol62a7513dl0nebvr6.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAngHbSH0chlTQYZUsLW4QwU_v0WuXsnmM</string>
 	<key>GCM_SENDER_ID</key>
