--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   flutter:
     sdk: flutter
   country_picker: ^2.0.19
-  riverpod: ^2.1.3
+  flutter_riverpod: ^2.1.3
 
 
 dev_dependencies:
