--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     sdk: flutter
   country_picker: ^2.0.19
   flutter_riverpod: ^2.1.3
+  image_picker: ^0.8.6
 
 
 dev_dependencies:
